Dependencies for MYSQL and H2 database (we will use MYSQL i think) Small fix on client