@@ -14,16 +14,31 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
-                <configuration>
-                    <mainClass>pt.ist.meic.sec.dpas.server.DPAServer</mainClass>
-                </configuration>
+
+                <executions>
+                <execution>
+                    <id>default-cli</id>
+                    <configuration>
+                        <mainClass>pt.ist.meic.sec.dpas.server.DPAServer</mainClass>
+                    </configuration>
+                </execution>
+
+                <execution>
+                    <id>client</id>
+                    <configuration>
+                        <mainClass>pt.ist.meic.sec.dpas.client.ClientExample</mainClass>
+                    </configuration>
+                </execution>
+            </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
                     <source>13</source>
                     <target>13</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
@@ -52,8 +67,17 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
+        </dependency>
     </dependencies>
-
 
 
     <properties>
@@ -61,5 +85,6 @@
         <maven.compiler.target>13</maven.compiler.target>
         <argLine>--enable-preview</argLine>
     </properties>
+
 
 </project>
